--- a/apps-script/ConfigSidebar.html
+++ b/apps-script/ConfigSidebar.html
@@ -22,7 +22,7 @@
         </div>
         <div id="configForm" style="display: none;">
           <div class="block">
-            <p>Enter Sheeyat API host details. Please see the README for more information.</p>
+            <p>Enter Bootlegger API host details. Please see the README for more information.</p>
           </div>
           <div class="block form-group">
             <label for="apiHost">API Host</label>
@@ -45,7 +45,7 @@
     </div>
     <div class="sidebar bottom">
       <span class="gray">
-        <a href="https://github.com/brandonc/sheeyat">Powered by Sheeyat</a>
+        <a href="https://github.com/brandonc/bootlegger">Powered by Bootlegger</a>
       </span>
     </div>
     <script src="//ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
