--- a/apps-script/PublishSidebar.html
+++ b/apps-script/PublishSidebar.html
@@ -44,7 +44,9 @@
     </div>
     <div class="sidebar bottom">
       <span class="gray">
-        <a href="https://github.com/brandonc/sheeyat">Powered by Sheeyat</a>
+        <a href="https://github.com/brandonc/bootlegger"
+          >Powered by Bootlegger</a
+        >
       </span>
     </div>
     <script src="//ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
